--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.7.2",
     "node-cron": "^3.0.3",
-    "nodemon": "^3.1.4"
+    "node-fetch": "^2.7.0",
+    "nodemon": "^3.1.4",
+    "xml2js": "^0.6.2"
   }
 }
