--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,5 +24,15 @@ jobs:
     steps:
       - name: Pull image from docker hub
         run: docker pull kirankumaravel/cambridgeappbackend:latest
+      - name: Remove existing docker container if already exists
+        run: |
+          CONTAINER_NAME = "cambridgeappbackendcontainer"
+          RUNNING_CONTAINER = $(docker ps -q --filter "name=$CONTAINER_NAME")
+
+          if [ -n "$RUNNING_CONTAINER"]; then
+            echo "Container is runnning, stopping and removing"
+            docker stop $CONTAINER_NAME
+            docker rm $CONTAINER_NAME
+          fi
       - name: Run docker container
-        run: docker run -d -p 5050:5000 --name cambridgeappbackendcontainer kirankumaravel/cambridgeappbackend
+        run: docker run -d -p 5050:5000 --name cambridgeappbackendcontainer --rm kirankumaravel/cambridgeappbackend
