--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,7 +28,8 @@ jobs:
         run: |
           CONTAINER_NAME="cambridgeappbackendcontainer"
           RUNNING_CONTAINER=$(docker ps -q --filter "name=$CONTAINER_NAME")
-          if ["$RUNNING_CONTAINER"]; then
+          RUNNING_CONTAINER="${RUNNING_CONTAINER//[[:space:]]//}"
+          if [ -n "$RUNNING_CONTAINER" ]; then
             echo "Container is runnning, stopping and removing"
             docker stop $CONTAINER_NAME
             docker rm $CONTAINER_NAME
