--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,6 +30,7 @@ jobs:
           CONTAINER_NAME="cambridgeappbackendcontainer"
           RUNNING_CONTAINER=$(docker ps -q --filter "name=$CONTAINER_NAME")
           RUNNING_CONTAINER="${RUNNING_CONTAINER//[[:space:]]//}"
+          echo "Container RC '$RUNNING_CONTAINER'"
           if [ -n "$RUNNING_CONTAINER" ]; then
             echo "Container is runnning, stopping and removing"
             docker stop $CONTAINER_NAME
