--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -13,9 +13,9 @@ jobs:
         uses: actions/checkout@v4
       - name: create .env File
         run: |
-          echo "PORT = 5000" >> config.env
-          echo "NODE_ENV = production" >> config.env
-          echo "DB_URL = mongodb+srv://${{secrets.MONGODB_USERNAME}}:${{secrets.MONGODB_PASSWORD}}@cambridgeapp.9ksvjfl.mongodb.net/cambridgeApp?retryWrites=true&w=majority&appName=CambridgeApp" >> config.env
+          echo "PORT = 5000" >> config/config.env
+          echo "NODE_ENV = production" >> config/config.env
+          echo "DB_URL = mongodb+srv://${{secrets.MONGODB_USERNAME}}:${{secrets.MONGODB_PASSWORD}}@cambridgeapp.9ksvjfl.mongodb.net/cambridgeApp?retryWrites=true&w=majority&appName=CambridgeApp" >> config/config.env
       - name: Login to Docker hub
         run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
       - name: build docker image
