--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
       - name: Pull image from docker hub
         run: docker pull kirankumaravel/cambridgeappbackend:latest
-      - name: Remove existing docker container if already exists
+      - name: Remove existing docker container if already exists.
         shell: /usr/bin/bash -e {0}
         run: |
           CONTAINER_NAME="cambridgeappbackendcontainer"
