--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -39,7 +39,7 @@ jobs:
           if [ -n "$RUNNING_CONTAINER" ]; then
             echo "Container is runnning, stopping and removing"
             docker stop $CONTAINER_NAME
-            docker rm $CONTAINER_NAME
+            docker rm $CONTAINER_NAME || true
           fi
       - name: Remove the docker image to free space
         run: docker rmi kirankumaravel/cambridgeappbackend
