--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
+    "axios-cookiejar-support": "^5.0.4",
     "backend": "file:",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -19,6 +21,7 @@
     "node-cron": "^3.0.3",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.4",
+    "tough-cookie": "^5.0.0",
     "xml2js": "^0.6.2"
   }
 }
