--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-cron": "^3.0.3",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.4",
+    "puppeteer": "^23.11.1",
     "tough-cookie": "^5.0.0",
     "xml2js": "^0.6.2"
   }
